--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/weather-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parashikimi Motit | Moti në Shqipëri, Kosovë dhe Maqedoni</title>
+    <title>Parashikimi i Motit | Moti në Shqipëri, Kosovë dhe Maqedoni</title>
     <meta name="description" content="Parashikimi i motit më i saktë për Shqipërinë, Kosovën dhe Maqedoninë e Veriut. Informacion i përditësuar për temperaturën, reshjet dhe erën në çdo qytet." />
     <meta name="keywords" content="parashikimi i motit, moti sot, moti neser, moti shqiperi, moti kosove, moti maqedoni" />
     
